# email2jira

./: config.yaml  main.py  pyproject.toml  test_jira.py  test_parse.py
