[tool.poetry]
name = "email2jira"
version = "0.1.0"
description = ""
authors = ["Peter <peter@liyao.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jira = "^3.8.0"
requests = "^2.31.0"
html2text = "^2024.2.26"
PyYAML = "^6.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
pynvim = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
exclude = [".venv"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.10"
